Recent content edits requested by Ramy...

--- a/ar/causes.html
+++ b/ar/causes.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - Causes</title>
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -132,7 +132,7 @@
           <div class="col-lg-8">
 
             <div class="row align-items-center justify-content-center">
-              <div class="col-lg-10 py-5">
+              <div class="col-lg-11 py-5">
                 <div class="d-flex">
                   <h1 class="h2 fw-bold display-4 text-animate pb-2">الأسباب</h1>
                   <span class="fw-bold">1</span>
@@ -142,9 +142,9 @@
 
                 <div class="row d-flex justify-content-center align-items-start pt-3">
                   <div class="col-10 col-md-4 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center align-items-center flex-column pb-3">
-                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-7 ">
+                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-65 ">
                       <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
-                        <img class="h-25" src="assets/img/icon/causes/icon-1.svg" alt="Icon">
+                        <img height="30" src="assets/img/icon/causes/icon-1.svg" alt="Icon">
                       </span>
                       <span>الأدوية أو المكملات الغذائية التي يمكن أن تسبب التعرق المفرط.</span>
                     </div>
@@ -153,9 +153,9 @@
                     </div>
                   </div>
                   <div class="col-10 col-md-4 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center align-items-center flex-column pb-3">
-                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-7 block-light">
+                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-65 block-light">
                       <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
-                        <img class="h-25" src="assets/img/icon/causes/icon-2.svg" alt="Icon">
+                        <img height="30" src="assets/img/icon/causes/icon-2.svg" alt="Icon">
                       </span>
                       <span>حالة طبية تسبب التعرق</span>
                     </div>
@@ -165,9 +165,9 @@
                     </div>
                   </div>
                   <div class="col-10 col-md-4 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center align-items-center flex-column pb-3">
-                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-7 ">
+                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-65 ">
                       <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
-                        <img class="h-25" src="assets/img/icon/causes/icon-3.svg" alt="Icon">
+                        <img height="30" src="assets/img/icon/causes/icon-3.svg" alt="Icon">
                       </span>
                       <span>فرد من العائلة يتعرق بشكل مفرط.</span>
                     </div>
@@ -245,6 +245,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
@@ -281,7 +282,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
