--- a/ar/complications.html
+++ b/ar/complications.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - Complications</title>
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -137,13 +137,13 @@
                 <h2 class="h1 fw-bold display-4 text-animate pb-2">المضاعفات</h2>
 
 
-                <p class="fs-4 mb-2 fw-bold">الأثر النفسى</p>
+                <p class="fs-4 mb-2 fw-bold">الأثر النفسي</p>
                 <p>إن الآثار السلبية لفرط التعرق تقارن مع حالات الأخرى ، مثل الصدفية الشديدة وأمراض الكلى في نهاية المرحلة والتهاب المفاصل الروماتويد والتصلب المتعدد.<sup>1</sup></p>
                 <p class="fw-bold mb-0">يشمل عبء المرض في فرط التعرق ما يلي:<sup>2</sup></p>
                 <ul class="custom-icon-list list-icon-1">
                   <li>الإحراج الشديد المرتبط بالملابس المبللة الكفوف المبللة</li>
                   <li>الاحتياج لتغيير الملابس مرتين أو أكثر في اليوم</li>
-                  <li>تجنب المصافحة عندما يكون ذلك ممكنا</li>
+                  <li>تجنب المصافحة و الكفوف مبللة عندما يكون ذلك ممكنا</li>
                   <li>الإحباط من أنشطة الحياة اليومية</li>
                   <li>ضعف الأداء والإنتاجية في العمل</li>
                   <li>الاكتئاب وانعدام الثقة</li>
@@ -259,6 +259,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
@@ -295,7 +296,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
