--- a/ar/diagnosis.html
+++ b/ar/diagnosis.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - Diagnosis</title>
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -149,7 +149,7 @@
                 </ul>
                 <p class="fs-4 mb-0 fw-bold">الاختبارات</p>
                 <p>قد تحتاج إلى اختبار واحد أو أكثر للمساعدة في تحديد سبب التعرق الشديد بجسمك. قد تؤكد اختبارات الدم أو البول أو تستبعد وجود حالة طبية أساسية.
-                  قد يوصي مزودك أيضًا بإجراء اختبار لقياس كمية العرق التي ينتجها جسمك. تشمل هذه الاختبارات:</p>
+                  قد يوصي طبيبك أيضًا بإجراء اختبار لقياس كمية العرق التي ينتجها جسمك. تشمل هذه الاختبارات:</p>
 
                 <div class="d-flex justify-content-start">
                   <div class="pe-2">
@@ -157,14 +157,14 @@
                   </div>
                   <p class="fs-5 mb-0 fw-bold">اختبار النشا واليود:</p>
                 </div>
-                <p>يطبق هذا الاختبار بوضع محلول اليود على المنطقة المتعرقة ويرش النشا فوق محلول اليود. عندما يكون لديك تعرق زائد، يتحول المحلول إلى اللون الأزرق الداكن.</p>
+                <p>طبيبك يطبق هذا الاختبار بوضع محلول اليود على المنطقة المتعرقة ويرش النشا فوق محلول اليود. عندما يكون لديك تعرق زائد، يتحول المحلول إلى اللون الأزرق الداكن.</p>
                 <div class="d-flex justify-content-start">
                   <div class="pe-2">
                     <img class="flip-img-only-ar" width="50" src="assets/img/icon/diagnosis/paper-icon.svg" alt="paper icon">
                   </div>
                   <p class="fs-5 mb-0 fw-bold">اختبار الورق:</p>
                 </div>
-                <p>يطبق هذا الاختبار بوضع ورق خاص على المنطقة المصابة لامتصاص العرق. في وقت لاحق، يقوم المختص بوزن الورق لتحديد مقدار التعرق.<sup>2</sup></p>
+                <p>طبيبك يطبق هذا الاختبار بوضع ورق خاص على المنطقة المصابة لامتصاص العرق. في وقت لاحق، يقوم طبيبك يطبق بوزن الورق لتحديد مقدار التعرق.<sup>2</sup></p>
 
 
               </div>
@@ -235,6 +235,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
@@ -271,7 +272,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
