--- a/ar/lifestyle-tips.html
+++ b/ar/lifestyle-tips.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - Lifestyle Tips</title>
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -218,7 +218,7 @@
           <div class="col-xl-10 col-12 pt-3">
             <div class="row">
               <div class="col-lg-12 pb-5">
-                <p class="fs-4 mb-2 fw-bold">تقنية الإرحال الأيونى (Iontophoresis)<sup>2</sup></p>
+                <p class="fs-4 mb-2 fw-bold">تقنية الإرحال الأيوني (Iontophoresis)<sup>2</sup></p>
                 <p>باستخدام هذا العلاج المنزلي، يمكنك نقع يديك أو قدميك في وعاء من الماء بينما يمرر الجهاز تيارًا كهربائيًا خفيفًا عبر الماء. التيار يسد الأعصاب التي تسبب التعرق. يمكنك شراء الجهاز إذا كان لديك وصفة طبية من الطبيب الخاص بك.</p>
                 <p>ستحتاج إلى نقع المناطق المصابة لمدة ٢٠ إلى ٤٠ دقيقة استخدم الجهاز حسب نصيحة طبيبك المعالج.<sup>1</sup></p>
 
@@ -291,6 +291,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
@@ -327,7 +328,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
