--- a/ar/terms-and-conditions.html
+++ b/ar/terms-and-conditions.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - Terms & Conditions</title>
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -191,6 +191,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
@@ -227,7 +228,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
