--- a/en/causes.html
+++ b/en/causes.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - Causes</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -128,7 +128,7 @@
           <div class="col-lg-8">
 
             <div class="row align-items-center justify-content-center">
-              <div class="col-lg-10 py-5">
+              <div class="col-lg-11 py-5">
                 <div class="d-flex">
                   <h1 class="h2 fw-bold display-4 text-animate pb-2">CAUSES</h1>
                   <span class="fw-bold">1</span>
@@ -138,36 +138,36 @@
 
                 <div class="row d-flex justify-content-center align-items-start pt-3">
                   <div class="col-10 col-md-3 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center align-items-center flex-column pb-3">
-                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-7 ">
+                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-65">
                       <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
-                        <img class="h-25" src="assets/img/icon/causes/icon-1.svg" alt="Icon">
+                        <img height="30" src="assets/img/icon/causes/icon-1.svg" alt="Icon">
                       </span>
                       <span>Medicine or food<br class="d-none d-lg-block">supplement that<br class="d-none d-lg-block">can cause excessive<br class="d-none d-lg-block">sweating.</span>
                     </div>
-                    <div class="causes-rounded-block-body fs-7 ">
+                    <div class="causes-rounded-block-body fs-65 ">
                       Certain medications – including some antidepressants, propranolol, pilocarpine, and bethanechol, can cause excessive sweating.<sup>1,2</sup>
                     </div>
                   </div>
                   <div class="col-10 col-md-3 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center align-items-center flex-column pb-3">
-                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-7 block-light">
+                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-65 block-light">
                       <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
-                        <img class="h-25" src="assets/img/icon/causes/icon-2.svg" alt="Icon">
+                        <img height="30" src="assets/img/icon/causes/icon-2.svg" alt="Icon">
                       </span>
                       <span>Medical<br class="d-none d-lg-block">condition that<br class="d-none d-lg-block">causes the<br class="d-none d-lg-block">sweating.</span>
                     </div>
-                    <div class="causes-rounded-block-body fs-7 block-light">
+                    <div class="causes-rounded-block-body fs-65 block-light">
                       Many medical conditions can cause excessive sweating. These include diabetes and gout.<br>A tumour or injury also can cause excessive sweating.<br>Women often sweat excessively when they get hot flashes during menopause. The
                       cause is obvious. Some women, however, develop excessive sweating after they have gone through menopause. This sweating does not have an obvious cause.<sup>1,2</sup>
                     </div>
                   </div>
                   <div class="col-10 col-md-3 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center align-items-center flex-column pb-3">
-                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-7 ">
+                    <div class="causes-rounded-block hide-arrow shadow fw-bold fs-65 ">
                       <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
-                        <img class="h-25" src="assets/img/icon/causes/icon-3.svg" alt="Icon">
+                        <img height="30" src="assets/img/icon/causes/icon-3.svg" alt="Icon">
                       </span>
                       <span>Family<br class="d-none d-lg-block">member who<br class="d-none d-lg-block">sweats<br class="d-none d-lg-block">excessively.</span>
                     </div>
-                    <div class="causes-rounded-block-body fs-7 ">
+                    <div class="causes-rounded-block-body fs-65 ">
                       When the excessive sweating occurs in one or two areas of the body, it is likely that a family member also has this condition.<sup>1,2</sup>
                     </div>
                   </div>
@@ -239,6 +239,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | Preparation Date: Jul 2023</p>
         </div>
 
         <div class="col-md-4 text-md-end">
@@ -274,7 +275,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
