--- a/en/diagnosis.html
+++ b/en/diagnosis.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT - Diagnosis</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2.104"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.105"/>
   </head>
   <body>
 
@@ -132,12 +132,12 @@
             <p class="fs-4 fw-bold mb-0">Symptoms</p>
             <p>Severe primary axillary hyperhidrosis (underarm sweating)  is usually diagnosed when a person has experienced at least 6 months of excessive underarm sweating (with no known cause) and also has at least two other characteristics listed below:<sup>1</sup></p>
             <ul class="custom-icon-list list-icon-1">
-              <li>Both underarms are affected.</li>
-              <li>Daily activities are impaired.</li>
-              <li>Occurs at least once a week.</li>
-              <li>Age of onset (first experience) less than 25 years.</li>
-              <li>Family history of excessive sweating.</li>
-              <li>Excessive sweating does not happen during sleep.</li>
+              <li>Both underarms are affected.<sup>1</sup></li>
+              <li>Daily activities are impaired.<sup>1</sup></li>
+              <li>Occurs at least once a week.<sup>1</sup></li>
+              <li>Age of onset (first experience) less than 25 years.<sup>1</sup></li>
+              <li>Family history of excessive sweating.<sup>1</sup></li>
+              <li>Excessive sweating does not happen during sleep.<sup>1</sup></li>
             </ul>
             <p class="fs-4 fw-bold mb-0">Tests</p>
             <p>You may need one or more tests to help pinpoint what’s causing your body to sweat too much. Blood or urine tests may confirm or rule out an underlying medical condition. Your doctor also may recommend a test to measure how much sweat your body produces.</p>
@@ -148,14 +148,14 @@
               </div>
               <p class="fs-5 fw-bold mb-0">STARCH-IODINE TEST:</p>
             </div>
-            <p>Your doctor applies an iodine solution to the sweaty area and sprinkles starch over the iodine solution. Where you have excess sweating, the solution turns dark blue.</p>
+            <p>Your doctor applies an iodine solution to the sweaty area and sprinkles starch over the iodine solution. Where you have excess sweating, the solution turns dark blue.<sup>2</sup></p>
             <div class="d-flex justify-content-start">
               <div class="pe-2">
                 <img width="50" src="assets/img/icon/diagnosis/paper-icon.svg" alt="paper icon">
               </div>
               <p class="fs-5 fw-bold mb-0">PAPER TEST:</p>
             </div>
-            <p>Your doctor places special paper on the affected area to absorb sweat. Later, your provider weighs the paper to determine how much you have sweated.<sup>2</sup></p>
+            <p>Your doctor places special paper on the affected area to absorb sweat. Later, your doctor weighs the paper to determine how much you have sweated.<sup>2</sup></p>
 
 
         </div>
@@ -225,6 +225,7 @@
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
         </ul>
+        <p class="text-md-center text-white fs-7">AE-AGNA-230130 | Preparation Date: Jul 2023</p>
       </div>
 
       <div class="col-md-4 text-md-end">
@@ -258,6 +259,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 </html>
