--- a/en/faqs.html
+++ b/en/faqs.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - FAQs</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -194,7 +194,7 @@
                 <div class="accordion-item mb-1 border-0">
                   <h2 class="accordion-header">
                     <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse7" aria-expanded="false" aria-controls="flush-collapse7">
-                      <span class="text-white fs-4">Do men and women sweat equally? & Who sweats more? Men or Women?</span>
+                      <span class="text-white fs-4">Do men and women sweat equally?</span>
                     </button>
                   </h2>
                   <div id="flush-collapse7" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
@@ -282,7 +282,7 @@
                 <div class="accordion-item mb-1 border-0">
                   <h2 class="accordion-header">
                     <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse13" aria-expanded="false" aria-controls="flush-collapse13">
-                      <span class="text-white fs-4">What is the mental impact of hyperhidrosis? & What is the psychological impact of hyperhidrosis?</span>
+                      <span class="text-white fs-4">What is the mental impact of hyperhidrosis?</span>
                     </button>
                   </h2>
                   <div id="flush-collapse13" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
@@ -381,6 +381,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | Preparation Date: Jul 2023</p>
         </div>
 
         <div class="col-md-4 text-md-end">
@@ -416,7 +417,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
