--- a/en/how-to-treat.html
+++ b/en/how-to-treat.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT - How To Treat</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2.104"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.105"/>
   </head>
   <body>
 
@@ -126,10 +126,11 @@
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-lg-8">
           <div class="d-flex">
-            <h1 class="d-inline-block h2 fw-bold display-5 text-animate">DISEASE SEVERITY & TREATMENT OPTIONS</h1>
+            <h1 class="d-inline-block h2 fw-bold display-5">
+              <span class="text-animate">DISEASE SEVERITY &<br>TREATMENT OPTIONS</span><sup>1</sup></h1>
           </div>
 
-                      <p>There are different treatment options available to treat hyperhidrosis (excessive sweating). These include nonsurgical (i.e., topical, systemic) and surgical treatments that vary in their therapeutic efficacy, side effects, cost, and duration of effect.</p>
+                      <p>There are different treatment options available to treat hyperhidrosis (excessive sweating). These include nonsurgical (i.e., topical, systemic) and surgical treatments that vary in their therapeutic efficacy, side effects, cost, and duration of effect.<sup>1</sup></p>
 
         </div>
         <div class="col-lg-4 text-center text-lg-end">
@@ -147,7 +148,7 @@
       <div class="row d-flex justify-content-center align-items-start">
         <div class="col-lg-6">
 
-                      <p class="fs-4 mb-2 fw-bold text-center">FOR MILD OR MODERATE AXILLARY<br>(UNDERARM) HYPERHIDROSIS:</p>
+                      <p class="fs-4 mb-2 fw-bold text-center">FOR MILD OR MODERATE AXILLARY<br>(UNDERARM) HYPERHIDROSIS:<sup>1</sup></p>
 
           <div class="row d-flex justify-content-center align-items-center pt-3 pb-4">
             <div class="col-10">
@@ -164,7 +165,7 @@
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0">
 
-                      <p class="fs-4 mb-2 fw-bold text-center">FOR SEVERE AXILLARY<br>(UNDERARM) HYPERHIDROSIS:</p>
+                      <p class="fs-4 mb-2 fw-bold text-center">FOR SEVERE AXILLARY<br>(UNDERARM) HYPERHIDROSIS:<sup>1</sup></p>
 
           <div class="row d-flex justify-content-center align-items-center pt-3 pb-4">
             <div class="col-10">
@@ -176,7 +177,7 @@
               <p><strong>2<sup>nd</sup> line:</strong> Intradermal injection of BTX-A (Botulinum toxin type-A) may be administered.</p>
               <p><strong>3<sup>rd</sup> line:</strong> The physician may consider the use of oral medications alone or as an additional therapy.</p>
               <p><strong>4<sup>th</sup> line:</strong> Surgical procedure to reduce sweat glands, done on an outpatient basis with local anesthesia.</p>
-              <p><strong>5<sup>th</sup> line:</strong> in patients not responding to the above therapies.</p>
+              <p><strong>5<sup>th</sup> line:</strong> A procedure known as Endoscopic thoracic sympathectomy (ETS) would be the last resort in patients not responding to the above therapies.</p>
                       </div>
         </div>
         <div class="col-12 col-lg-10 pt-3">
@@ -243,6 +244,7 @@
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
         </ul>
+        <p class="text-md-center text-white fs-7">AE-AGNA-230130 | Preparation Date: Jul 2023</p>
       </div>
 
       <div class="col-md-4 text-md-end">
@@ -276,6 +278,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 </html>
