--- a/en/hyperhidrosis-facts.html
+++ b/en/hyperhidrosis-facts.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT - Hyperhidrosis Facts</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2.104"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.105"/>
   </head>
   <body>
 
@@ -147,7 +147,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/underarm.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">65%</span><span>Underarms<br><span class="fs-7">(axillary)</span></span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">65%</span><span>Underarms<sup class="fw-light">2</sup><br><span class="fs-7">(axillary)</span></span>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/head.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">42%</span><span>Head/face<br><span class="fs-7">(craniofacial)</span></span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">42%</span><span>Head/face<sup class="fw-light">2</sup><br><span class="fs-7">(craniofacial)</span></span>
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/hand.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">40%</span><span>Hands<br><span class="fs-7">(palmar)</span></span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">40%</span><span>Hands<sup class="fw-light">2</sup><br><span class="fs-7">(palmar)</span></span>
               </div>
             </div>
           </div>
@@ -171,7 +171,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/feet.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">38%</span><span>Feet<br><span class="fs-7">(plantar)</span></span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">38%</span><span>Feet<sup class="fw-light">2</sup><br><span class="fs-7">(plantar)</span></span>
               </div>
             </div>
           </div>
@@ -179,7 +179,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/under-breasts.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">29%</span><span>Under<br>breasts</span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">29%</span><span>Under<br>breasts<sup class="fw-light">2</sup></span>
               </div>
             </div>
           </div>
@@ -187,7 +187,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/back.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">28%</span><span>Back</span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">28%</span><span>Back<sup class="fw-light">2</sup></span>
               </div>
             </div>
           </div>
@@ -195,7 +195,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/chest.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">27%</span><span>Chest</span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">27%</span><span>Chest<sup class="fw-light">2</sup></span>
               </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/underarm.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">65%</span><span>Underarms<br><span class="fs-7">(axillary)</span></span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">65%</span><span>Underarms<sup class="fw-light">2</sup><br><span class="fs-7">(axillary)</span></span>
               </div>
             </div>
           </div>
@@ -211,7 +211,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/head.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">42%</span><span>Head/face<br><span class="fs-7">(craniofacial)</span></span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">42%</span><span>Head/face<sup class="fw-light">2</sup><br><span class="fs-7">(craniofacial)</span></span>
               </div>
             </div>
           </div>
@@ -219,7 +219,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/hand.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">40%</span><span>Hands<br><span class="fs-7">(palmar)</span></span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">40%</span><span>Hands<sup class="fw-light">2</sup><br><span class="fs-7">(palmar)</span></span>
               </div>
             </div>
           </div>
@@ -227,7 +227,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/feet.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">38%</span><span>Feet<br><span class="fs-7">(plantar)</span></span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">38%</span><span>Feet<sup class="fw-light">2</sup><br><span class="fs-7">(plantar)</span></span>
               </div>
             </div>
           </div>
@@ -235,7 +235,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/under-breasts.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">29%</span><span>Under<br>breasts</span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">29%</span><span>Under<br>breasts<sup class="fw-light">2</sup></span>
               </div>
             </div>
           </div>
@@ -243,7 +243,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/back.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">28%</span><span>Back</span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">28%</span><span>Back<sup class="fw-light">2</sup></span>
               </div>
             </div>
           </div>
@@ -251,7 +251,7 @@
             <div class="px-3 text-center">
               <img class="w-100" src="assets/img/icon/h/chest.svg" alt="Icon">
               <div class="d-flex align-items-center justify-content-center font-en-bold lh-sm mh-55-px">
-                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">27%</span><span>Chest</span>
+                <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-6">27%</span><span>Chest<sup class="fw-light">2</sup></span>
               </div>
             </div>
           </div>
@@ -298,22 +298,22 @@
           <div class="row">
                           <div class="col-6 col-md-3 col-lg-4 col-xl-3 d-flex justify-content-start lh-1 align-items-center flex-column pb-3 mb-4 mb-lg-0">
                 <span class="rounded-circle ps-primary-rounded-block text-white bg-dark fw-bold fs-6">IN ONE OR<br>A FEW AREAS<br>OF THE BODY</span>
-                <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3 hide">
+                <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3">
                   “Focal” means that the excessive sweating (hyperhidrosis) affects one or a few parts of the body. The areas of the body most commonly affected are the underarms, hands and/or feet, and forehead.                </div>
               </div>
                           <div class="col-6 col-md-3 col-lg-4 col-xl-3 d-flex justify-content-start lh-1 align-items-center flex-column pb-3 mb-4 mb-lg-0">
                 <span class="rounded-circle ps-primary-rounded-block text-white bg-dark fw-bold fs-6">ON BOTH<br>SIDES OF<br>THE BODY</span>
-                <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3 hide">
+                <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3">
                   If the excessive sweating occurs in the underarms, the person usually notices both underarms sweat excessively. The same holds true for the hands and feet.                </div>
               </div>
                           <div class="col-6 col-md-3 col-lg-4 col-xl-3 d-flex justify-content-start lh-1 align-items-center flex-column pb-3 mb-4 mb-lg-0">
                 <span class="rounded-circle ps-primary-rounded-block text-white bg-dark fw-bold fs-6">AFTER<br>WAKING<br>UP</span>
-                <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3 hide">
+                <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3">
                   Sweating may begin soon after the person wakes up, but the person usually does not notice damp sheets or wet clothing unless the room is hot.                </div>
               </div>
                           <div class="col-6 col-md-3 col-lg-4 col-xl-3 d-flex justify-content-start lh-1 align-items-center flex-column pb-3 mb-4 mb-lg-0">
                 <span class="rounded-circle ps-primary-rounded-block text-white bg-dark fw-bold fs-6">AT LEAST<br>ONCE<br>A WEEK</span>
-                <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3 hide">
+                <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3">
                   For many people, it occurs much more often.                </div>
               </div>
                       </div>
@@ -469,6 +469,7 @@
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
         </ul>
+        <p class="text-md-center text-white fs-7">AE-AGNA-230130 | Preparation Date: Jul 2023</p>
       </div>
 
       <div class="col-md-4 text-md-end">
@@ -502,6 +503,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 </html>
