--- a/en/index.html
+++ b/en/index.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT - Don't Crop Treat</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2.104"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.105"/>
   </head>
   <body>
 
@@ -212,7 +212,7 @@
             </div>
           </div>
 
-                      <p class="h3 pt-3 text-start">the most commonly reported body area where hyperhidrosis occurs is the underarms.</p>
+                      <p class="h3 pt-3 text-start">of patients with hyperhidrosis report having axillary hyperhidrosis.<sup>1</sup></p>
 
         </div>
       </div>
@@ -270,7 +270,7 @@
         <div class="col-8">
           <a href="en/lifestyle-tips" class="d-block oval-block text-center text-decoration-none">
             <img class="w-100" src="assets/img/banners/oval-model-3.png" alt="Model 3">
-            <span class="h2 fw-bold text-dark pt-3 d-block">LIFE STYLE<br>TIPS</span>
+            <span class="h2 fw-bold text-dark pt-3 d-block">LIFESTYLE<br>TIPS</span>
           </a>
         </div>
       </div>
@@ -336,6 +336,7 @@
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
         </ul>
+        <p class="text-md-center text-white fs-7">AE-AGNA-230130 | Preparation Date: Jul 2023</p>
       </div>
 
       <div class="col-md-4 text-md-end">
@@ -371,6 +372,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 </html>
