--- a/en/surgical-other-procedures.html
+++ b/en/surgical-other-procedures.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT - Surgical & Other Procedures</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2.104"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.105"/>
   </head>
   <body>
 
@@ -170,7 +170,7 @@
               <img width="200" src="assets/img/icon/surgical/surgical-3.svg" alt="surgical icon">
               <p class="fs-4 mb-2 fw-bold text-center">MICROWAVE THERAPY</p>
               <p>With this therapy, a handheld device delivers microwave energy to destroy sweat glands in the armpits.</p>
-              <p>Treatments involve two 20 to 30 minutes sessions, three months apart. Possible side effects are a change in skin sensation and some discomfort.</p>
+              <p>Treatments involve two sessions of 20 to 30 minutes, three months apart. Possible side effects are a change in skin sensation and some discomfort.</p>
               <p>Long-term side effects are unknown.<sup>1</sup></p>
             </div>
           </div>
@@ -243,6 +243,7 @@
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
         </ul>
+        <p class="text-md-center text-white fs-7">AE-AGNA-230130 | Preparation Date: Jul 2023</p>
       </div>
 
       <div class="col-md-4 text-md-end">
@@ -276,6 +277,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 </html>
