--- a/ar/hyperhidrosis-facts.html
+++ b/ar/hyperhidrosis-facts.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - Hyperhidrosis Facts</title>
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -136,13 +136,13 @@
               <div class="col-lg-10 pt-5 pb-2">
                 <h2 class="h1 fw-bold display-4 text-animate pb-2">ما هو فرط التعرق؟</h2>
                 <p class="fs-4 mb-2 fw-bold">تعريف فرط التعرق؟</p>
-                <p>العرق هو سائل عديم الرائحة صافٍ تفرزه الغدد العرقية في الجسم التي تنظم درجة حرارة الجسم.<sup>1</sup></p>
+                <p>العرق هو سائل عديم الرائحة صافٍ تفرزه الغدد العرقية التي تنظم درجة حرارة الجسم.<sup>1</sup></p>
                 <p>فرط التعرق هي حالة طبية تسبب التعرق المفرط. يحدث التعرق المفرط عندما يتعرق الشخص أكثر مما هو ضروري. نعم من الضروري أن تتعرق. يعمل التعرق على تبريد الجسم مما يمنعنا من السخونة الزائدة. ومع ذلك، فإن الأشخاص الذين يعانون من فرط التعرق
                   يتعرقون عندما لا يحتاج الجسم إلى التبريد.</p>
                 <p>يتعرق العديد من الأشخاص المصابين بفرط التعرق من منطقة أو منطقتين من الجسم. في أغلب الآحيان يتعرقون من راحة اليد أو القدمين أو الإبطين أو الرأس. بينما يظل باقي الجسم جافًا، قد يتساقط العرق من منطقة أو منطقتان.</p>
                 <p>التعرق المفرط يمكن أن يتداخل مع الأنشطة اليومية. يمكن أن تكون الأيدي متعرقه لدرجة يصعب معها فتح مقبض الباب أو استخدام الكمبيوتر. تمتص الملابس العرق من منطقة الإبطين، مما يسبب علامات العرق الواضحة. ولأن الجلد غالباً ما يكون رطباً
                   يمكن أن يؤدي ذلك إلى حدوث بعض أنواع العدوى الجلدية.<sup>2</sup></p>
-                <p>لست وحدك، ما يقرب من ٣٪ من عامة، معظمهم من الأشخاص الذين تتراوح أعمارهم بين ٢٥ و٦٤ عامًا، يعانون من فرط التعرق.<sup>1</sup></p>
+                <p>لست وحدك، ما يقارب من ٣٪ من عامة، معظمهم من الأشخاص الذين تتراوح أعمارهم بين ٢٥ و٦٤ عامًا، يعانون من فرط التعرق.<sup>1</sup></p>
                 <p class="mb-1">يمكن ان يؤثر فرط التعرق الأولي على منطقة واحدة أو أكثر من مناطق الجسم، وأكثر مناطق الجسم شيوعاً حيث يحدث فرط التعرق هي تحت الإبط، كما ورد في دراسة استقصائية لمرضى فرط التعرق في الولايات المتحدة.<sup>3</sup></p>
               </div>
             </div>
@@ -156,7 +156,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/underarm.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٦٥%</span><span>الإبط</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٦٥%</span><span>الإبط<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -164,7 +164,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/head.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٢%</span><span>الرأس/الوجه</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٢%</span><span>الرأس/الوجه<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -172,7 +172,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/hand.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٠%</span><span>اليدين</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٠%</span><span>اليدين<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -180,7 +180,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/feet.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٣٨%</span><span>القدم</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٣٨%</span><span>القدم<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -188,7 +188,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/under-breasts.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٩%</span><span>تحت الصدر</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٩%</span><span>تحت الصدر<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -196,7 +196,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/back.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٨%</span><span>الظهر</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٨%</span><span>الظهر<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -204,7 +204,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/chest.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٧%</span><span>الصدر</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٧%</span><span>الصدر<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -213,7 +213,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/underarm.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٦٥%</span><span>الإبط</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٦٥%</span><span>الإبط<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -221,7 +221,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/head.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٢%</span><span>الرأس/الوجه</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٢%</span><span>الرأس/الوجه<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -229,7 +229,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/hand.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٠%</span><span>اليدين</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٠%</span><span>اليدين<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -237,7 +237,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/feet.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٣٨%</span><span>القدم</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٣٨%</span><span>القدم<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -245,7 +245,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/under-breasts.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٩%</span><span>تحت الصدر</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٩%</span><span>تحت الصدر<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -253,7 +253,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/back.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٨%</span><span>الظهر</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٨%</span><span>الظهر<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -261,7 +261,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/chest.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٧%</span><span>الصدر</span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٧%</span><span>الصدر<sup class="fw-light">2</sup></span>
                         </div>
                       </div>
                     </div>
@@ -310,22 +310,22 @@
                 <div class="row">
                   <div class="col-6 col-md-3 col-lg-4 col-xl-3 d-flex justify-content-start lh-1 align-items-center flex-column pb-3 mb-4 mb-lg-0">
                     <span class="rounded-circle ps-primary-rounded-block text-white bg-dark fw-bold fs-6">في منطقة واحدة أو عدة مناطق من الجسم:</span>
-                    <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3 hide">
+                    <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3">
                       تعني كلمة "بؤري" أن التعرق المفرط يؤثر على جزء أو أجزاء قليلة من الجسم. مناطق الجسم الأكثر إصابة هي الإبط واليدين و/ أو القدمين والجبهة. </div>
                   </div>
                   <div class="col-6 col-md-3 col-lg-4 col-xl-3 d-flex justify-content-start lh-1 align-items-center flex-column pb-3 mb-4 mb-lg-0">
                     <span class="rounded-circle ps-primary-rounded-block text-white bg-dark fw-bold fs-6">على جانبي الجسم:</span>
-                    <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3 hide">
+                    <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3">
                       إذا حدث التعرق الزائد في منطقة الإبط، فعادة ما يلاحظ الشخص تعرق تحت الإبطين بشكل مفرط. وينطبق الشيء نفسه على اليدين والقدمين. </div>
                   </div>
                   <div class="col-6 col-md-3 col-lg-4 col-xl-3 d-flex justify-content-start lh-1 align-items-center flex-column pb-3 mb-4 mb-lg-0">
                     <span class="rounded-circle ps-primary-rounded-block text-white bg-dark fw-bold fs-6">بعد الاستيقاظ:</span>
-                    <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3 hide">
+                    <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3">
                       قد يبدأ التعرق بعد فترة وجيزة من استيقاظ الشخص، ولكن لا يلاحظ الشخص عادة ملاءات مبللة أو ملابس مبللة إلا إذا كانت الغرفة ساخنة. </div>
                   </div>
                   <div class="col-6 col-md-3 col-lg-4 col-xl-3 d-flex justify-content-start lh-1 align-items-center flex-column pb-3 mb-4 mb-lg-0">
                     <span class="rounded-circle ps-primary-rounded-block text-white bg-dark fw-bold fs-6">مرة واحدة على الأقل في الأسبوع:</span>
-                    <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3 hide">
+                    <div class="ps-primary-rounded-block-text fs-65 text-center px-2 pb-3">
                       بالنسبة لكثير من الناس، فإنه يحدث في كثير من الأحيان. </div>
                   </div>
                 </div>
@@ -482,6 +482,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
@@ -518,7 +519,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
