--- a/ar/surgical-other-procedures.html
+++ b/ar/surgical-other-procedures.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - Surgical & Other Procedures</title>
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -151,7 +151,7 @@
                   <div class="row d-flex justify-content-center align-items-center pt-3">
                     <div class="col-md-10 text-center">
                       <img width="200" src="assets/img/icon/surgical/surgical-1.svg" alt="surgical icon">
-                      <p class="fs-4 mb-2 fw-bold text-center">إزالة غدة العرق</p>
+                      <p class="fs-4 mb-2 fw-bold text-center">إزالة غدد العرق</p>
                       <div class="text-start">
                         <p>إذا كنت تتعرق بشدة في الإبط فقط، فقد يقترح الطبيب الخاص بك إزالة تلك الغدد العرقية. يمكن القيام بذلك من خلال كشطها أو شفطها أو باستخدام مزيج من الاثنين (الكشط والشفط).<sup>1</sup></p>
                       </div>
@@ -261,6 +261,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
@@ -297,7 +298,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
